--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -6,15 +6,17 @@
   "repository": "yeah",
   "devDependencies": {
     "@babel/core": "^7.3.4",
+    "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-object-assign": "^6.5.0",
-    "eslint-plugin-react-hooks": "^1.6.0",
     "es6-promise": "^3.3.1",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "expose-loader": "^0.7.1",
     "imports-loader": "^0.6.5",
+    "jest": "^24.7.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
   },
@@ -25,8 +27,10 @@
     "babel-polyfill": "^6.5.0",
     "babel-runtime": "^6.3.19",
     "history": "^2.0.0",
+    "jest-puppeteer": "^4.1.0",
     "material-ui-pickers": "^2.2.4",
     "moment": "^2.10.6",
+    "puppeteer": "^1.14.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^5.0.0",
@@ -36,6 +40,10 @@
     "inject-data": "node data/inject.js",
     "watch": "webpack -d --watch",
     "dev-build": "webpack -d --display-modules",
-    "prod-build": "webpack -d -p"
+    "prod-build": "webpack -d -p",
+    "test": "npm run inject-data; jest"
+  },
+  "jest": {
+    "preset": "jest-puppeteer"
   }
 }
